# SPINNx

./: .gitignore  README.md  pyproject.toml
exps/: spinn_fromScratch.py
spinnx/: spinn2d
